--- a/alvera/templates/includes/navbar.html
+++ b/alvera/templates/includes/navbar.html
@@ -47,7 +47,7 @@
         <div class="row align-items-center">
           <div class="col-lg-2 col-md-3 col-6">
             <a href="{% static './" class="brand-wrap' %}">
-              <img class="logo" src="{% static './images/logo.png' %}" />
+                <img class="logo" src="{% static './images/logo.png' %}" width="172" height="40" />
             </a>
             <!-- brand-wrap.// -->
           </div>
