--- a/alvera/templates/includes/navbar.html
+++ b/alvera/templates/includes/navbar.html
@@ -46,8 +46,8 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-2 col-md-3 col-6">
-            <a href="{% static './" class="brand-wrap' %}">
-                <img class="logo" src="{% static './images/logo.png' %}" width="172" height="40" />
+            <a href="{% url 'home' %}" class="brand-wrap' %}">
+                <img class="logo" src="{% static './images/AlveraStoreLogo.png' %}" width="172" height="40" />
             </a>
             <!-- brand-wrap.// -->
           </div>
@@ -56,12 +56,13 @@
               <button
                 type="button"
                 class="btn btn-primary dropdown-toggle"
-                data-toggle="dropdown"
-              >
+                data-toggle="dropdown">
                 <i class="fa fa-bars"></i> All category
               </button>
               <div class="dropdown-menu">
                 
+                <a class="dropdown-item" href="{% url 'store' %}">All category </a>
+
                 {% for category in links %} 
                   
                   <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
@@ -80,7 +81,7 @@
             <!-- category-wrap.// -->
           </div>
           <!-- col.// -->
-          <a href="{% static "./store.html" %}" class="btn btn-outline-primary">Store</a>
+          <a href="{% url 'store' %}" class="btn btn-outline-primary">Store</a>
           <div class="col-lg col-md-6 col-sm-12 col">
             <form action="#" class="search">
               <div class="input-group w-100">
