--- a/alvera/templates/store/store.html
+++ b/alvera/templates/store/store.html
@@ -32,6 +32,15 @@
             <div class="filter-content collapse show" id="collapse_1" style="">
               <div class="card-body">
                 <ul class="list-menu">
+                  
+                  <li><a href="{% url 'store' %}">All category </a></li>
+
+                  {% for category in links %}
+                  
+                    <li><a href="{{ category.get_url }}">{{ category.category_name }}</a></li>
+                  
+                  {% endfor %}
+                  <!--
                   <li><a href="#">People </a></li>
                   <li><a href="#">Watches </a></li>
                   <li><a href="#">Cinema </a></li>
@@ -39,6 +48,7 @@
                   <li><a href="#">Home items </a></li>
                   <li><a href="#">Animals</a></li>
                   <li><a href="#">People </a></li>
+                  -->
                 </ul>
               </div>
               <!-- card-body.// -->
@@ -155,13 +165,13 @@
             <figure class="card card-product-grid">
               <div class="img-wrap">
 
-                <img src="{{ product.images.url }}" />
+                <a href="{{ product.get_url }}"><img src="{{ product.images.url }}" />
               
               </div>
               <!-- img-wrap.// -->
               <figcaption class="info-wrap">
                 <div class="fix-height">
-                  <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
+                  <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
                   <div class="price-wrap mt-2">
                     <span class="price">${{ product.price }}</span>
                     <!-- IMPORTANTE <del class="price-old">${{ product.price }}</del> -->
