--- a/alvera/templates/store/product_detail.html
+++ b/alvera/templates/store/product_detail.html
@@ -76,11 +76,19 @@
                 </div>
               </div>
               <!-- row.// -->
-              <hr />
-              <a href="./product-detail.html" class="btn btn-primary">
-                <span class="text">Add to cart</span>
-                <i class="fas fa-shopping-cart"></i>
-              </a>
+              <hr/>
+
+              {% if single_product.stock <= 0 %}
+                <h5 class="text-danger font-weight-bold p-2 border border-danger rounded text-center">
+                  <i class="fas fa-exclamation-circle"></i> Out of Stock
+                </h5>
+              {% else %}
+                <a href="./product-detail.html" class="btn btn-primary">
+                  <span class="text">Add to cart</span>
+                  <i class="fas fa-shopping-cart"></i>
+                </a>
+              {% endif %}
+              
             </article>
             <!-- product-info-aside .// -->
           </main>
